Updates from Overleaf

--- a/LP_Avancement.tex
+++ b/LP_Avancement.tex
@@ -54,7 +54,7 @@
   \hline
   \textbf{Diffraction de Fraunhofer} p\pageref{LP_DiffractionFraunhofer} & \textcolor{green}{Diffraction par une fente+CCD-MHTEX} \textcolor{green}{Filtrage spatial} & \textcolor{orange}{\textbf{30\%}} &  \\
   \hline
-  \textbf{Diffraction par des structures périodiques} p\pageref{LP_DiffractionPeriodique} & \textcolor{green}{Mesures raies mercure par un réseau} & \textcolor{yellow}{\textbf{60\%}} & Définir facteur de structure/facteur de forme\\
+  \textbf{Diffraction par des structures périodiques} p\pageref{LP_DiffractionPeriodique} & \textcolor{green}{Mesures raies mercure par un réseau} & \textcolor{green}{\textbf{80\%}} & \\
   \hline
   \textbf{Absorption et émission de la lumière} p\pageref{LP_Absorption} & \textcolor{green}{Emission/absorption rhodamine} \textcolor{green}{Spectre emission lampe à vapeur de mercure + réseau} & \textcolor{red}{\textbf{0\%}} & Leçon Elric pas mal \\
   \hline
