--- a/LP_EcoulementsParfaits/LP_EcoulementParfait.tex
+++ b/LP_EcoulementsParfaits/LP_EcoulementParfait.tex
@@ -22,6 +22,8 @@
   \hline
   Mécanique 2ème année & H. Gié et J.-P. Sarmant & Tec\&Doc (1996) & \\
   \hline
+  Physique-Chimie PSI/PSI* & Pascal Olive & Ellipses (2022) & \\
+  \hline
 \end{tabularx}
 \end{center}
 
@@ -88,9 +90,10 @@ Cela constitue une équation de conservation de l'énergie d'un fluide. Savoir q
 \section{Applications}
 
 \subsection{Les sondes Pitot}
+Bien fait dans le Pascal Olive.\\
 Du nom d'Henri Pitot (1730) qui voulait mesurer le débit de la Seine.\\
 
-Faire le dessin. Attention, mettre point d'arrêt A à l'intérieur du tube. On a un écoulement parfait hors de la couche limite. Cf Guyon-Hulin-Petit p494.\\
+Faire le dessin. Attention, mettre point d'arrêt A à l'intérieur du tube. On a un écoulement parfait hors de la couche limite et il n'y a pas de discontinuité de la pression dans la couche. Cf Guyon-Hulin-Petit p494.\\
 
 \underline{Application Bernouilli le long de la ligne de courant passant par A$_{\infty}$A :}
 \begin{equation}
