--- a/LP_InterferencesDeuxOndes/LP_InterferencesDeuxOndes.tex
+++ b/LP_InterferencesDeuxOndes/LP_InterferencesDeuxOndes.tex
@@ -20,9 +20,9 @@ Physique Spé MP-MP* & Olivier, Gié, Sarmant & Tec \& Doc & \\
   \hline 
    Tout-en-un, MP & M.-N. Sanz. & Dunod &  \\
    \hline
-   Optique & Eugene HECHT & Pearson (2005) & \\
-   \hline
    Optique & S. Houard & de Boeck & \\
+   \hline
+   Optique Physique & R. Taillet & de Boeck (2006) & \\
    \hline
 \end{tabularx}
 \end{center}
