Updates from Overleaf

--- a/LP_Avancement.tex
+++ b/LP_Avancement.tex
@@ -52,7 +52,7 @@
   \hline
   \textbf{Interférométrie à division d'amplitude} p\pageref{LP_DivisionAmplitude} & \textcolor{green}{Michelson : doublet sodium} & \textcolor{green}{\textbf{100\%}} & A revoir vite fait coin d'air \\
   \hline
-  \textbf{Diffraction de Fraunhofer} p\pageref{LP_DiffractionFraunhofer} & \textcolor{green}{Diffraction par une fente+CCD-MHTEX} \textcolor{green}{Filtrage spatial} & \textcolor{orange}{\textbf{30\%}} &  \\
+  \textbf{Diffraction de Fraunhofer} p\pageref{LP_DiffractionFraunhofer} & \textcolor{green}{Diffraction par une fente+CCD-MHTEX} \textcolor{green}{Filtrage spatial} & \textcolor{green}{\textbf{80\%}} & Faire des choix pour les calculs \\
   \hline
   \textbf{Diffraction par des structures périodiques} p\pageref{LP_DiffractionPeriodique} & \textcolor{green}{Mesures raies mercure par un réseau} & \textcolor{green}{\textbf{80\%}} & \\
   \hline
