--- a/LP_DiffractionFraunhofer/LP_DiffractionFraunhofer.tex
+++ b/LP_DiffractionFraunhofer/LP_DiffractionFraunhofer.tex
@@ -75,7 +75,7 @@
   On voit quand même que l'amplitude de l'onde résultante est la transformée de Fourier de la fonction $t(x,y)$ de l'objet diffractant. Il y a une relation de réciprocité entre les distances angulaires de la figure de diffraction et les distances dans le plan d'ouverture de l'objet diffractant.
 
   \textcolor{red}{Transition :} on va mettre en application ce qu'on vient de détailler en observant la figure de diffraction d'objets simples.
-  \section{Exemples de systèmes diffractants}
+  \section{Deux exemples de systèmes diffractants}
   
   \subsection{Diffraction par une fente}
   Faire le calcul + la manip. Il faut juste prendre $t(x,y)=rect_x(-a/2,a/2)$.\\
@@ -86,6 +86,9 @@
       \item ordinateur avec Spectra Suite + câble connexion caméra,
       \item fentes sources de différentes taille + fente de taille variable,
   \end{itemize}
+  Montrer visuellement que plus la largeur de la fente diminue, plus l'espacement entre les maxima est grand. Parler de la réciprocité entre espace réel et espace de Fourier.\\
+
+  \textcolor{red}{Transition : avec l'étude de la figure de diffraction de la fente, on peut en déduire celle d'un trou.}
   
 
   \subsection{Diffraction par un trou d'Young}
@@ -93,13 +96,13 @@
   \begin{equation}
       \frac{\lambda}{a} < \theta < \frac{\sqrt{2}\lambda}{a}\sim 1.4\frac{\lambda}{a}
   \end{equation}
-  En prenant la moyenne : $\theta \sim (1.2\pm0.2)\frac{\lambda}{a}$. Le calcul se fait dans le Taillet p154.\\
+  En prenant la moyenne : $\theta \sim (1.2\pm0.2)\frac{\lambda}{a}$. Le calcul réel se fait dans le Taillet p154.\\
   Conséquence voir Perez p276-277 : 
   \begin{itemize}
       \item parler du critère de Rayleigh donnant la résolution latérale maximale d'un microscope optique standard,
-      \item \textcolor{red}{Attention, nécessite le théorème de Babinet} : tâches de diffraction circulaire autour de la Lune attribuées aux goutellettes d'eau/glace dans l'atmosphère. Calcul du diamètre des gouttes d'eau : $\theta=\frac{1.22\lambda}{D}$, si on prend $\theta\sim6\theta_{L}=0.5\degree$, on trouve en prenant $\lambda=600nm$ : $D=\frac{}{}$
+      \item \textcolor{red}{Attention, nécessite le théorème de Babinet}. \textcolor{green}{slide} : tâches de diffraction circulaire autour de la Lune attribuées aux goutellettes d'eau/glace dans l'atmosphère. Calcul du diamètre "moyen" des gouttes d'eau : $\theta=\frac{1.22\lambda}{D}$, si on prend $\theta\sim6\theta_{L}=0.5\degree$, on trouve en prenant $\lambda=600nm$ : $D=\frac{1.22\times 600e^{-9}}{\times6\times0.5\pi/180}=14\mu m$
   \end{itemize}
-  Apodisation voir Mauras p258: pour observer les exoplanètes de faible intensité lumineuse proche des étoiles qui ont une très grande intensité lumineuse, on peut choisir de mettre un masque dont la fonction de transmission de la lentille décroît de l'unitéen son milieu à zéro à son bord : réduit l'intensité de des lobes secondaires de diffraction d'un objet très lumineux.
+  Apodisation voir Mauras p258 et Clément Sayrin Diffraction (2) : pour observer les exoplanètes de faible intensité lumineuse proche des étoiles qui ont une très grande intensité lumineuse, on peut choisir de mettre un masque dont la fonction de transmission de la lentille décroît de l'unité en son milieu à zéro à son bord : réduit l'intensité de des lobes secondaires de diffraction d'un objet très lumineux.
   
   \subsection{Ensemble de structure diffractante (peut sauter si besoin, ou en ouverture)}
   Si on prend pleins de trous d'Young et qu'on connait leur répartition spatiale, 
