--- a/LP_Microscopie/LP_Microscospie.tex
+++ b/LP_Microscopie/LP_Microscospie.tex
@@ -116,6 +116,7 @@
   \textcolor{red}{Transition :} Comment rendre visible des choses que ne le sont pas ?
   
 \section{Microscopie à contraste de phase}
+Voir TD Diffraction (2) Clément Sayrin.\\
 Cette technique s'intéresse en particulier à des échantillons transparents dont les épaisseurs sont faibles \textcolor{green}{Slide photos avec ou sans contraste de phase + photos microscopies Nikon}. Elle a valu le prix Nobel à Frederik Zernike en 1953.
 \subsection{Principe}
 Voir Hecht p635. On envoie de la lumière sur un objet dit de phase qui va modifier localement la phase de la lumière incidente :
